syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "user.proto";

package pb;
option go_package = "github.com/RoyceAzure/go-stockinfo-api/pb";


message loginUserRequest{
    string email = 1;
    string password = 2;
}

message loginUserResponse{
    User user = 1;
	string session_id =2;
    string access_token = 3;
	string refresh_token = 4;
    google.protobuf.Timestamp access_token_expired_at = 5;
	google.protobuf.Timestamp refresh_token_expired_at = 6;
}