syntax = "proto3";
import "stock.proto";
package pb;

option go_package = "github.com/RoyceAzure/go-stockinfo/shared/pb";

message InitStockRequest{
}

message InitStockResponse{
    int64 success_count = 1;
    int64 failed_count = 2;
}

message GetStockRequest{
    string stock_code=1;
}

message GetStockResponse{
    Stock data=1;
}


message GetStocksRequest{
    int32 page_size=1;
    int32 page=2;
}

message GetStocksResponse{
    repeated Stock data=1;
}



